[gd_scene load_steps=17 format=3 uid="uid://ccc1ogp2hdxkh"]

[ext_resource type="Script" uid="uid://25j03nlt0tow" path="res://cube.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://dqt1osrxj4bco" path="res://ai_controller_3d.gd" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://6sytqg3h54mh" path="res://addons/godot_rl_agents/sync.gd" id="3_h2yge"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_h2yge"]
material = SubResource("StandardMaterial3D_h2yge")

[sub_resource type="BoxShape3D" id="BoxShape3D_7mycd"]

[sub_resource type="BoxMesh" id="BoxMesh_7dm0k"]
size = Vector3(20, 0.1, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_h2yge"]
size = Vector3(20, 1, 20)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_h2yge"]
bounce = 0.68

[sub_resource type="SphereShape3D" id="SphereShape3D_h2yge"]

[sub_resource type="SphereMesh" id="SphereMesh_1bvp3"]

[sub_resource type="BoxMesh" id="BoxMesh_1bvp3"]
size = Vector3(20, 40, 1)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1bvp3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1bvp3"]
size = Vector3(20, 40, 1)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lquwl"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7mycd"]

[node name="main" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.00610856, 0.999981, 0, -0.999981, 0.00610856, 0, 13.3216, 0)
shadow_enabled = true

[node name="cube" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.749623, 0)
script = ExtResource("1_h2yge")

[node name="AIController3D" type="Node3D" parent="cube"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.749623, 0)
script = ExtResource("2_0xm2m")
metadata/_custom_type_script = "uid://c8c4ckdqt44ri"

[node name="MeshInstance3D" type="MeshInstance3D" parent="cube"]
mesh = SubResource("BoxMesh_h2yge")

[node name="CollisionShape3D" type="CollisionShape3D" parent="cube"]
shape = SubResource("BoxShape3D_7mycd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_7dm0k")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.435138, 0)
shape = SubResource("BoxShape3D_h2yge")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.751437, 0, 0.659805, 0, 1, 0, -0.659805, 0, -0.751437, 9.46299, 1.60684, -9.67583)

[node name="Sync" type="Node" parent="."]
script = ExtResource("3_h2yge")
speed_up = 20.0
metadata/_custom_type_script = "uid://6sytqg3h54mh"

[node name="Ball" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0348678, 11.7638, 0)
mass = 0.098
physics_material_override = SubResource("PhysicsMaterial_h2yge")
gravity_scale = 0.23

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball"]
shape = SubResource("SphereShape3D_h2yge")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ball"]
layers = 257
mesh = SubResource("SphereMesh_1bvp3")

[node name="Walls" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.03012, 10.4928)
mesh = SubResource("BoxMesh_1bvp3")

[node name="StaticBody3D" type="StaticBody3D" parent="Walls/MeshInstance3D"]
physics_material_override = SubResource("PhysicsMaterial_1bvp3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_1bvp3")

[node name="Walls4" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10.4928, 5.03012, -4.58655e-07)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Walls4"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10.4809, 0, -10.4928)
mesh = SubResource("BoxMesh_1bvp3")
skeleton = NodePath("../../Walls")

[node name="StaticBody3D" type="StaticBody3D" parent="Walls4/MeshInstance3D2"]
physics_material_override = SubResource("PhysicsMaterial_1bvp3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls4/MeshInstance3D2/StaticBody3D"]
shape = SubResource("BoxShape3D_1bvp3")

[node name="Walls2" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Walls2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.03012, 10.4928)
mesh = SubResource("BoxMesh_1bvp3")

[node name="StaticBody3D" type="StaticBody3D" parent="Walls2/MeshInstance3D"]
physics_material_override = SubResource("PhysicsMaterial_lquwl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls2/MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_1bvp3")

[node name="Walls3" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20.7508, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Walls3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.03012, 10.4928)
mesh = SubResource("BoxMesh_1bvp3")

[node name="StaticBody3D" type="StaticBody3D" parent="Walls3/MeshInstance3D"]
physics_material_override = SubResource("PhysicsMaterial_7mycd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls3/MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_1bvp3")
